--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <p>
       If you have any questions about this Privacy Policy, please contact us at:<br>
       <strong>Email:</strong> support@epicbattles.app<br>
-      <strong>Business Location:</strong> [Your Country]
+      <strong>Business Location:</strong> Australia
     </p>
 
     <footer>
@@ -70,3 +70,4 @@
   </main>
 </body>
 </html>
+
